feat: :sparkles: Added Navigation and Main Content in index page

--- a/index.html
+++ b/index.html
@@ -8,8 +8,67 @@
     <script src="./Js/main.js" defer></script>
 </head>
 <body>
-    <header>
-        <h1>StarBucks</h1>
+    <header class="container">
+        <div class="contNav">
+            <nav>
+                <div class="contLogo">
+                    <img src="./img/logo.png" alt="">
+                </div>
+                <div class="contItensMenu">
+                    <ul>
+                        <li><a href="#">Inicio</a></li>
+                        <li><a href="#">Menu</a></li>
+                        <li><a href="#">Novedades</a></li>
+                        <li><a href="#">Contacto</a></li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
+        
     </header>
+    <main class="container">
+        <div class="contMain">
+            <div class="contSectionInfo">
+                <div class="contSecInfoTitle">
+                    <h2>Titulo</h2>
+                </div>
+                <div class="contSecInfoDesc">
+                    <p>
+                        Description  Description  Description 
+                        Description  Description  Description 
+                        Description  Description  Description 
+                        Description  Description  Description 
+                    </p>
+                </div>
+            </div>
+            <div class="contSectionImg">
+                <div class="contImg">
+                    <img id="mainImg" src="./img/img2.png" alt="">
+                </div>
+            </div>
+        </div>
+        <div class="carrusel1">
+            <div class="contImgCarr">
+                <img src="./img/thumb1.png" alt="">
+            </div>
+            <div class="contImgCarr">
+                <img src="./img/thumb2.png" alt="">
+            </div>
+            <div class="contImgCarr">
+                <img src="./img/thumb3.png" alt="">
+            </div>
+        </div>
+            <div class="carruselAside">
+            <div class="contImgCarr">
+                <img src="./img/facebook.png" alt="">
+            </div>
+            <div class="contImgCarr">
+                <img src="./img/twitter.png" alt="">
+            </div>
+            <div class="contImgCarr">
+                <img src="./img/instagram.png" alt="">
+            </div>
+        </div>
+    </main>
 </body>
 </html>
