--- a/index.html
+++ b/index.html
@@ -1,74 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>StarBucks</title>
-    <link rel="stylesheet" href="./Css/style.css">
+    <link rel="stylesheet" href="./Css/style.css" />
     <script src="./Js/main.js" defer></script>
-</head>
-<body>
+  </head>
+  <body>
     <header class="container">
-        <div class="contNav">
-            <nav>
-                <div class="contLogo">
-                    <img src="./img/logo.png" alt="">
-                </div>
-                <div class="contItensMenu">
-                    <ul>
-                        <li><a href="#">Inicio</a></li>
-                        <li><a href="#">Menu</a></li>
-                        <li><a href="#">Novedades</a></li>
-                        <li><a href="#">Contacto</a></li>
-                    </ul>
-                </div>
-            </nav>
-        </div>
-        
+      <div class="contNav">
+        <nav id="nav">
+          <div class="contMenuLogo">
+            <a class="navHam" href="#nav">
+              <img src="./img/hamburger.svg" alt="" />
+            </a>
+            <a class="navClo" href="#">
+              <img src="./img/close.svg" alt="" />
+            </a>
+          </div>
+          <div class="contLogo">
+            <img src="./img/logo.png" alt="" />
+          </div>
+          <ul class="contItensMenu">
+              <li><a href="#">Inicio</a></li>
+              <li><a href="#">Menu</a></li>
+              <li><a href="#">Novedades</a></li>
+              <li><a href="#">Contacto</a></li>
+          </ul>
+        </nav>
+      </div>
     </header>
     <main class="container">
-        <div class="contMain">
-            <div class="contSectionInfo">
-                <div class="contSecInfoTitle">
-                    <h2>Titulo</h2>
-                </div>
-                <div class="contSecInfoDesc">
-                    <p>
-                        Description  Description  Description 
-                        Description  Description  Description 
-                        Description  Description  Description 
-                        Description  Description  Description 
-                    </p>
-                </div>
-            </div>
-            <div class="contSectionImg">
-                <div class="contImg">
-                    <img id="mainImg" src="./img/img2.png" alt="">
-                </div>
-            </div>
+      <div class="contMain">
+        <div class="contSectionInfo">
+          <div class="contSecInfoTitle">
+            <h2>StarrBucks</h2>
+          </div>
+          <div class="contSecInfoDesc">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea ipsa,
+              odio, tempora id perspiciatis magni nulla repudiandae ipsum enim,
+              reprehenderit aspernatur atque nihil culpa velit amet dolore ut ex
+              alias.
+            </p>
+          </div>
         </div>
-        <div class="carrusel1">
-            <div class="contImgCarr">
-                <img src="./img/thumb1.png" alt="">
-            </div>
-            <div class="contImgCarr">
-                <img src="./img/thumb2.png" alt="">
-            </div>
-            <div class="contImgCarr">
-                <img src="./img/thumb3.png" alt="">
-            </div>
+        <div class="contSectionImg">
+          <div class="contImg">
+            <img id="mainImg" src="./img/img2.png" alt="" />
+          </div>
         </div>
-            <div class="carruselAside">
-            <div class="contImgCarr">
-                <img src="./img/facebook.png" alt="">
-            </div>
-            <div class="contImgCarr">
-                <img src="./img/twitter.png" alt="">
-            </div>
-            <div class="contImgCarr">
-                <img src="./img/instagram.png" alt="">
-            </div>
+      </div>
+      <div class="carrusel1">
+        <div class="contImgCarr">
+          <img src="./img/thumb1.png" alt="" />
         </div>
+        <div class="contImgCarr">
+          <img src="./img/thumb2.png" alt="" />
+        </div>
+        <div class="contImgCarr">
+          <img src="./img/thumb3.png" alt="" />
+        </div>
+      </div>
+      <div class="carruselAside">
+        <div class="contImgCarr">
+          <img class="logoFace" src="./img/face.svg" alt="" />
+        </div>
+        <div class="contImgCarr">
+          <img class="logoTwit" src="./img/twit.svg" alt="" />
+        </div>
+        <div class="contImgCarr">
+          <img class="logoInst" src="./img/insta.svg" alt="" />
+        </div>
+      </div>
     </main>
-</body>
+  </body>
 </html>
